--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
     <body>
         <script src=“./lib/phaser.js”></script>
+        <script src = "./src/main.js"></script>
+        <p>pew pew</p>
     </body>
 </html>
