actually doing something
it fucking works

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
 
     <body>
-        <script src=“./lib/phaser.js”></script>
-        <script src = "./src/main.js"></script>
-        <p>pew pew</p>
+        <script src="./lib/phaser.js"></script>
+        <script src ="./src/main.js"></script>
     </body>
 </html>
